# airtools

./: .gitignore  .mypy.ini  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  README.rst  __init__.py  buildfile.m  kaczmarz.py  maxent.py  meson.build  picard.py  pyproject.toml  requirements.txt  rzr.py  setup.cfg  setup.py  test.py  tester.py
+airtools/: kaczmarz.m  logmart.m  maxent.m  picard.m  unitTest.m
.github/: FUNDING.yml
.github/workflows/: ci.yml  ci_matlab.yml
airtools/: __init__.py  kaczmarz.py  logmart.py  lsqlin.py  maxent.py  picard.py  rzr.py
airtools/tests/: conftest.py  test_all.py  test_octave.py
fortran/: logmart.f90  random_utils.f90  test_logmart.f90
matlab/: csvd.m  kaczmarz.m  logmart.m  maxent.m  test_matlab.m  unitTest.m
src/airtools/: __init__.py  kaczmarz.py  logmart.py  lsqlin.py  maxent.py  picard.py  rzr.py
src/airtools/tests/: conftest.py  matlab_engine.py  test_all.py  test_matlab.py  test_octave.py
test/: test.py
tests/: conftest.py  test.py  test_all.py  test_matlab.m  test_octave.py
